--- a/AppliFilms.Api/Dockerfile
+++ b/AppliFilms.Api/Dockerfile
@@ -2,17 +2,24 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /app
 
-# Copier les fichiers csproj et restaurer les dépendances
-COPY *.csproj ./
+# Copier le fichier .csproj et restaurer les dépendances
+COPY AppliFilms.Api/*.csproj ./AppliFilms.Api/
+WORKDIR /app/AppliFilms.Api
 RUN dotnet restore
 
-# Copier le reste du code et publier
-COPY . ./
+# Copier tout le code du projet
+COPY AppliFilms.Api/. ./
+
+# Publier l'application en Release
 RUN dotnet publish -c Release -o out
 
 # Étape 2 : runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
-COPY --from=build /app/out .
+COPY --from=build /app/AppliFilms.Api/out .
+
+# Exposer le port pour Render
 EXPOSE 80
-ENTRYPOINT ["dotnet", "Movies.dll"]
+
+# Définir l'entrée
+ENTRYPOINT ["dotnet", "AppliFilms.Api.dll"]
