--- a/AppliFilms.Api/Dockerfile
+++ b/AppliFilms.Api/Dockerfile
@@ -2,24 +2,27 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /app
 
-# Copier le fichier .csproj et restaurer les dépendances
+# Copier le .csproj dans un sous-dossier
 COPY AppliFilms.Api/*.csproj ./AppliFilms.Api/
+
+# Aller dans le dossier du projet
 WORKDIR /app/AppliFilms.Api
+
+# Restaurer les dépendances
 RUN dotnet restore
 
-# Copier tout le code du projet
+# Copier tout le reste du code
 COPY AppliFilms.Api/. ./
 
-# Publier l'application en Release
+# Publier l'application
 RUN dotnet publish -c Release -o out
 
 # Étape 2 : runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
+
+# Copier le résultat du publish
 COPY --from=build /app/AppliFilms.Api/out .
 
-# Exposer le port pour Render
 EXPOSE 80
-
-# Définir l'entrée
 ENTRYPOINT ["dotnet", "AppliFilms.Api.dll"]
