--- a/AppliFilms.Api/Dockerfile
+++ b/AppliFilms.Api/Dockerfile
@@ -1,28 +1,23 @@
-# Étape 1 : build
+﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+USER $APP_UID
+WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
+
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["AppliFilms.Api.csproj", "./"]
+RUN dotnet restore "AppliFilms.Api.csproj"
+COPY . .
+WORKDIR "/src/"
+RUN dotnet build "AppliFilms.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "AppliFilms.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
 WORKDIR /app
-
-# Copier le .csproj dans un sous-dossier
-COPY AppliFilms.Api/*.csproj ./AppliFilms.Api/
-
-# Aller dans le dossier du projet
-WORKDIR /app/AppliFilms.Api
-
-# Restaurer les dépendances
-RUN dotnet restore
-
-# Copier tout le reste du code
-COPY AppliFilms.Api/. ./
-
-# Publier l'application
-RUN dotnet publish -c Release -o out
-
-# Étape 2 : runtime
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
-WORKDIR /app
-
-# Copier le résultat du publish
-COPY --from=build /app/AppliFilms.Api/out .
-
-EXPOSE 80
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "AppliFilms.Api.dll"]
